--- a/scribble/app/views/posts/new.html.erb
+++ b/scribble/app/views/posts/new.html.erb
@@ -10,17 +10,13 @@
     <h1>Scribbler</h1>
     <img scr="http://wdi-scribble.herokuapp.com/assets/logo-22b5fb1e556f78819ada48709ca00b56f52a1e50c00fb713c52f0fc9ccf864ef.png" alt="Scribbler" />
     <%= yield %>
-    <ul>
-      <% @posts.each do |post| %>
-      <li>
-        <%= link_to post.content, post %>
-        <a href="/posts/<%= post.id %>">
-          <%= post.title %>
-          <%= post.content %>
-          <%= post.author %>
-        </a>
-      </li>
+    <h2>Create New Post</h2>
+      <%= form_for Post.new do |f| %>
+        <%= f.label :title %>
+        <%= f.text_field :title %>
+        <%= f.label :content %>
+        <%= f.text_field :content %>
+        <%= f.submit "Add a New Post" %>
       <% end %>
-    </ul>
   </body>
 </html>
