--- a/scribble/app/views/posts/show.html.erb
+++ b/scribble/app/views/posts/show.html.erb
@@ -1,17 +1,10 @@
+<h2><%= @post.title %> </h2>
+<h4><%= @post.content %></h4>
 
+<h4><%= link_to "(edit)", edit_post_path %></h4>
 
+<h3>Tags</h3>
 
-<!-- <h2><%= @artist.name %> <%= link_to "(edit)", edit_artist_song_path(@artist) %></h2>
-<h4><%= @artist.nationality %></h4>
+<h3>Comments</h3>
 
-<%= image_tag @artist.photo_url, class: "artist-photo" %>
-
-<h3>Songs <%= link_to "(+)", new_artist_song_path %></h3>
-
-<ul>
-  <% @artist.songs.each do |song| %>
-    <li>
-      <%= link_to "#{song.title} (#{song.album})", artist_song_path(@artist, song) %>
-    </li>
-  <% end %>
-</ul> -->
+<h4><%= link_to "(add new comment)", new_post_comment_path(@post) %></h4>
