--- a/scribble/app/views/comments/new.html.erb
+++ b/scribble/app/views/comments/new.html.erb
@@ -7,16 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
   <body>
-    <h1>Scribbler</h1>
-    <img scr="http://wdi-scribble.herokuapp.com/assets/logo-22b5fb1e556f78819ada48709ca00b56f52a1e50c00fb713c52f0fc9ccf864ef.png" alt="Scribbler" />
+    <h1>New Comment</h1>
     <%= yield %>
     <h2>Create New Post</h2>
-      <%= form_for @post do |f| %>
-        <%= f.label :title %>
-        <%= f.text_field :title %>
+      <%= form_for [@post,@comment] do |f| %>
         <%= f.label :content %>
         <%= f.text_field :content %>
-        <%= f.submit "Add a New Post" %>
+        <%= f.submit "Create Comment" %>
       <% end %>
   </body>
 </html>
