saving before leaving and edit somehow doesn't work

--- a/scribble/app/views/layouts/application.html.erb
+++ b/scribble/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <a>
+  <%= link_to "Home", root_path %><img src="http://wdi-scribble.herokuapp.com/assets/logo-22b5fb1e556f78819ada48709ca00b56f52a1e50c00fb713c52f0fc9ccf864ef.png">
+</a>
 <%= yield %>
 
 </body>
