--- a/scribble/app/views/posts/show.html.erb
+++ b/scribble/app/views/posts/show.html.erb
@@ -8,3 +8,14 @@
 <h3>Comments</h3>
 
 <h4><%= link_to "(add new comment)", new_post_comment_path(@post) %></h4>
+
+<%= yield %>
+<ul>
+  <% @post.comments.each do |comment| %>
+  <li>
+      <h4><%= comment.content %></h4>
+      <p><%= comment.author %></p>
+      <p><%= comment.created_at %></p>
+  </li>
+  <% end %>
+<ul>
