--- a/scribble/app/views/comments/new.html.erb
+++ b/scribble/app/views/comments/new.html.erb
@@ -9,10 +9,10 @@
   <body>
     <h1>New Comment</h1>
     <%= yield %>
-    <h2>Create New Post</h2>
       <%= form_for [@post,@comment] do |f| %>
         <%= f.label :content %>
-        <%= f.text_field :content %>
+        <%= f.text_area :content %>
+        <%= f.hidden_field :post_id %>
         <%= f.submit "Create Comment" %>
       <% end %>
   </body>
