--- a/scribble/app/views/posts/edit.html.erb
+++ b/scribble/app/views/posts/edit.html.erb
@@ -4,7 +4,7 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :content %>
-  <%= f.text_field :content %>
+  <%= f.text_area :content %>
   <%= f.submit %>
 <% end %>
 
