--- a/scribble/app/views/posts/new.html.erb
+++ b/scribble/app/views/posts/new.html.erb
@@ -15,7 +15,7 @@
         <%= f.label :title %>
         <%= f.text_field :title %>
         <%= f.label :content %>
-        <%= f.text_field :content %>
+        <%= f.text_area :content %>
         <%= f.submit "Add a New Post" %>
       <% end %>
   </body>
