--- a/scribble/app/views/posts/index.html.erb
+++ b/scribble/app/views/posts/index.html.erb
@@ -11,14 +11,14 @@
     <%= yield %>
     <ul>
       <% @posts.each do |post| %>
-      <li>
-        <%= link_to post.title, post %>
+
+        <!-- <%= link_to post.title, post %> -->
         <a href="/posts/<%= post.id %>">
-        <%= post.title %>
+        <h2><%= post.title %></h2></a>
         <%= post.content %>
         <%= post.author %>
-      </a>
-      </li>
+
+
       <% end %>
     </ul>
     <h4><%= link_to "(add post)", new_post_path %></h4>
