--- a/scribble/app/views/posts/show.html.erb
+++ b/scribble/app/views/posts/show.html.erb
@@ -16,6 +16,8 @@
       <h4><%= comment.content %></h4>
       <p><%= comment.author %></p>
       <p><%= comment.created_at %></p>
+      <%= link_to "(edit)", edit_post_comment_path(@post, comment) %>
   </li>
+
   <% end %>
 <ul>
